0023375: (OCC 6.5.3 regression) BRepBuilderAPI_Sewing returns wrong result

Fixed selection of sewing pairs of edges.
Mistake fix
Adding test case for this fix